@@ -3,6 +3,7 @@ Revision history for perl distribution Convos
 4.31 Not Released
  - Add backoff reconnect logic to the WebSocket
  - Fix issue where the WebSocket would not reconnect after being disconnected
+ - Fix reloading user object on reconnect
  - Waiting for "online" and "offline" events in the browser does not seem to
    work as expected.
 
